# pink

./: .gitignore  .pink-repl-history  Cargo.toml  README.md
examples/: propositional logic.pink
runtime/: .gitignore  .history.txt  Cargo.toml  dep.pink  example.pink  history.txt
runtime/src/: lib.rs  main.rs
runtime/src/engine/: _spread_mod.rs  eval.rs  mod.rs  test.rs  wasm.rs
runtime/src/matcher/: mod.rs  test.rs
runtime/src/matching/: _non_spread_test.rs  _spread_mod.rs  mod.rs  test.rs
runtime/src/parser/: mod.rs  resolvers.rs  standalone.rs  test.rs
runtime/src/parser/resolvers/: chain.rs  embedded.rs  file_resolver.rs  function.rs  map.rs  mod.rs  std_resolver.rs  test.rs
runtime/src/parser/test_files/: cycle1.pink  cycle2.pink  test1.pink  test2.pink
runtime/src/parser/test_files/test3/: nested.pink
runtime/src/repl/: mod.rs
runtime/standard_library/: Core.pink  PredicateLogic.pink  SetOperations.pink  example.pink  first_order_logic.pink  predicate_logic.pink
site/: .gitignore  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
site/.wasm-runtime/: package.json  pink_runtime.d.ts  pink_runtime.js  pink_runtime_bg.wasm
site/src/: app.postcss
site/src/lib/: index.ts  worker.ts
site/src/lib/components/ui/tabs/: tabs-list.svelte
site/src/routes/: +layout.svelte  +page.svelte
site/src/routes/docs/: +page.svelte  +page.ts
site/src/routes/playground/: +page.svelte  Evaluator.svelte  Expression.svelte  Spinner.svelte
site/static/: worker.js
site/static/wasm-runtime/: pink_runtime.d.ts  pink_runtime.js  pink_runtime_bg.js  pink_runtime_bg.wasm  pink_runtime_bg.wasm.d.ts
src/: parser.rs
src/matcher/: mod.rs
standard_library/: PredicateLogic.pink  SetOperations.pink  binary.pink  core.pink  first_order_logic.pink  function calls.pink  peano.pink  propositional logic.pink  sets.pink
