[package]
name = "pink-runtime"
version = "0.1.1"
edition = "2021"
authors = ["Odilf"]
readme = "../README.md"
description = "A very minimal replecement based DSL, intended for math."
license = "GPL-3.0+"
repository = "https://github.com/Odilf/pink"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
nom = "7.1.3"
once_cell = "1.17.0"
regex = { version = "1.7.1", features = ["pattern"] }
regex-macro = "0.2.0"
rustyline = "10.1.1"
termion = "2.0.1"
