[package]
name = "pink-runtime"
version = "0.1.1"
edition = "2021"
authors = ["Odilf"]
readme = "../README.md"
description = "A very minimal (and inefficient) replecement based language, intended for math."
license = "GPL-3.0+"
repository = "https://github.com/Odilf/pink"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
clap = { version = "4.0.30", features = ["derive"] }
nom = "7.1.3"
once_cell = "1.17.0"
regex = { version = "1.7.1", features = ["pattern"] }
regex-macro = "0.2.0"
rustyline = "11.0.0"
termion = "2.0.1"
