[package]
name = "pink-runtime"
version = "0.1.1"
edition = "2021"
authors = ["Odilf"]
readme = "../README.md"
description = "A very minimal (and inefficient) replecement based language, intended for math."
license = "GPL-3.0+"
repository = "https://github.com/Odilf/pink"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["wasm"]
default = ["repl"]
embedded_std = []
repl = ["rustyline", "clap", "termion"]
wasm = ["embedded_std", "wasm-bindgen", "web-sys", "js-sys", "wasm-bindgen-futures"]
all = ["repl", "wasm"]

[dependencies]
clap = { version = "4.0.30", features = ["derive"], optional = true }
nom = "7.1.3"
once_cell = "1.17.0"
regex = { version = "1.7.1", optional = true }
regex-macro = "0.2.0"
rustyline = { version = "11.0.0", optional = true }
termion = { version = "2.0.1", optional = true }
include_dir = "0.7.3"
pretty_assertions = "1.4.0"
thiserror = "1.0.49"
wasm-bindgen = { version = "0.2.87", optional = true }
web-sys = { version = "0.3.64", features = ["Window", "Performance", "Worker", "WorkerGlobalScope"], optional = true }
js-sys = { version = "0.3.64", optional = true }
wasm-bindgen-futures = { version = "0.4.37", optional = true }

